--- a/spring/Dockerfile
+++ b/spring/Dockerfile
@@ -1,4 +1,4 @@
 FROM java:8
 EXPOSE 8080
-ADD /build/libs/spring-0.0.1-SNAPSHOT.jar neo.jar
+ADD /target/demo-0.0.1-SNAPSHOT.jar neo.jar
 ENTRYPOINT ["java", "-jar", "neo.jar"]
